Feat: add logging to report upload process