@@ -2,15 +2,19 @@ package com.levita.levita_monitoring.service;
 
 import com.google.api.services.sheets.v4.Sheets;
 import com.google.api.services.sheets.v4.model.ValueRange;
-import com.levita.levita_monitoring.configuration.*;
-import com.levita.levita_monitoring.dto.reportDto.FullReportDto;
+import com.levita.levita_monitoring.configuration.sheet_reports.*;
+import com.levita.levita_monitoring.dto.FullReportDto;
 import com.levita.levita_monitoring.model.User;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import java.io.IOException;
 import java.math.BigDecimal;
+import java.time.Duration;
+import java.time.Instant;
 import java.time.LocalDate;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
@@ -20,6 +24,10 @@ import java.util.Map;
 
 @Service
 public class SheetsReportService {
+
+    private static final Logger log = LoggerFactory.getLogger(SheetsReportService.class);
+
+    private static final String VALUE_INPUT_OPTION = "USER-ENTERED";
 
     private final Sheets sheets;
     private final ShiftColumnsConfig shiftColumnsConfig;
@@ -50,18 +58,20 @@ public class SheetsReportService {
     @Scheduled(cron = "0 0 3 * * *", zone = "Europe/Moscow")
     public void insertDateRowIfMissing() throws IOException {
         String today = LocalDate.now().format(dateFormatter);
+        log.info("{} - Запуск плановой установки текущей даты", today);
 
         for(Map.Entry<String, String> entry : dateColumnsConfig.getColumns().entrySet()){
             String sheetName = entry.getKey();
-            if (sheetName.startsWith("Журнал операций")){
+            if (sheetName.startsWith("Журнал операций")){ // TODO: config
+                log.info("Пропущена плановая вставка даты в раздел \"Журнал операций\" для листа: [{}]", sheetName);
                 continue;
             }
 
             String col = entry.getValue();
 
             int startRow = switch (sheetName){
-                case "Пробные (команда Кати)", "Пробные (команда Алины)" -> 8;
-                case "Текущие (команда Кати)", "Текущие (команда Алины)" -> 6;
+                case "Пробные (команда Кати)", "Пробные (команда Алины)" -> 8; // TODO: config
+                case "Текущие (команда Кати)", "Текущие (команда Алины)" -> 6; // TODO: config
                 default -> 3;
             };
 
@@ -74,7 +84,7 @@ public class SheetsReportService {
             List<List<Object>> values = response.getValues();
             if (values != null) {
                 boolean alreadyExists = values.stream()
-                        .anyMatch(row -> !row.isEmpty() && today.equals(row.get(0).toString()));
+                        .anyMatch(row -> !row.isEmpty() && today.equals(row.getFirst().toString()));
 
                 if(!alreadyExists) {
                     int rowToInsert = startRow + values.size();
@@ -88,16 +98,24 @@ public class SheetsReportService {
                             .execute();
                 }
             }
+            log.info("Дата в листе [{}] установлена успешно", sheetName);
         }
+        log.info("{} - Плановая установка текущей даты завершена", today);
     }
 
     public void updateFullReport(FullReportDto dto, User user) throws IOException {
         String today = LocalDate.now().format(dateFormatter);
+        log.info("{} - Начало загрузки данных", LocalDate.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")));
 
+        Instant start = Instant.now();
         updateShiftReport(dto.shift(), user, today);
         updateTrialReport(dto.trial(), user, today);
         updateCurrentReport(dto.current(), user, today);
         saveOperationsForDate(dto.operations(), user, today);
+        Instant end = Instant.now();
+
+        Duration duration = Duration.between(start, end);
+        log.info("Загрузка данных за дату {} завершена за {} мс", today, duration.toMillis());
     }
 
     private void saveOperationsForDate(List<FullReportDto.OperationDto> operations, User user, String today) throws IOException {
@@ -106,20 +124,23 @@ public class SheetsReportService {
 
         String sheetName = sheetNamesConfig.getOperations().get(location);
         if (sheetName == null) {
+            log.warn("Не найден лист для операций по локации: [{}]", location);
             throw new IllegalArgumentException("Не найден лист для операций по локации: " + location);
         }
 
         String dateCol = dateColumnsConfig.getColumns().get(sheetName);
         if (dateCol == null) {
+            log.warn("Не найдена колонка с датами для листа: [{}]", sheetName);
             throw new IllegalArgumentException("Не найдена колонка с датами для листа: " + sheetName);
         }
 
-        int startRow = 2;
+        int startRow = 2; // config
         int insertRow = findFirstEmptyRow(sheetName, dateCol, startRow);
 
         if (operations == null || operations.isEmpty()) {
             List<Object> row = List.of(today);
             appendRow(row, buildCellRange(sheetName, dateCol, insertRow));
+            log.info("Добавлена пустая строка с датой в таблицу: [{}]", sheetName);
             return;
         }
 
@@ -130,17 +151,19 @@ public class SheetsReportService {
             String category = dto.category();
             String comment = dto.comment();
 
-            Object income = "Приход".equalsIgnoreCase(type)
+            Object income = "Приход".equalsIgnoreCase(type) //config
                     ? formatAmount(amount)
                     : null;
-            Object expense = "Расход".equalsIgnoreCase(type)
+            Object expense = "Расход".equalsIgnoreCase(type) //config
                     ? formatAmount(amount)
                     : null;
 
             List<Object> row = buildOperationRow(today, income, expense, cashType, category, admin, comment);
 
             appendRow(row, buildCellRange(sheetName, dateCol, insertRow++));
+            log.info("Сохранена операция: [{}]", type);
         }
+        log.info("Загружено {} операций для пользователя [{} ({})]", operations.size(), admin, location);
     }
 
     private void updateTrialReport(FullReportDto.TrialReportDto dto, User user, String today) throws IOException {
@@ -150,6 +173,7 @@ public class SheetsReportService {
 
         Map<String, String> entry = trialColumnsConfig.getColumns().get(key);
         if (entry == null || !entry.containsKey("sheet") || !entry.containsKey("range")) {
+            log.warn("Неверный конфиг для пробного отчета пользователя: [{}]", key);
             throw new IllegalArgumentException("Неверный конфиг для пробного отчета пользователя : " + key);
         }
 
@@ -174,6 +198,7 @@ public class SheetsReportService {
 
         String targetRange = String.format("'%s'!%s%d:%s%d", sheetName, startCol, row, endCol, row);
         updateRow(rowData, targetRange);
+        log.info("Загружен раздел \"Пробные\" для пользователя [{} ({})]", admin, location);
     }
 
     public void updateShiftReport(FullReportDto.ShiftReportDto dto, User user, String today) throws IOException {
@@ -182,13 +207,13 @@ public class SheetsReportService {
 
         String dateCol = shiftColumnsConfig.getColumns().get(location);
         if (dateCol == null) {
+            log.warn("Неизвестная локация: [{}]", location);
             throw new IllegalArgumentException("Неизвестная локация: " + location);
         }
 
         int row = findRowByDate(sheetNamesConfig.getShift(), dateCol, 3 , today);
 
         String startCol = nextColumn(dateCol);
-
         List<Object> rowData = List.of(
                 dto.shiftStart(),
                 dto.shiftEnd(),
@@ -198,6 +223,7 @@ public class SheetsReportService {
         String sheetName = sheetNamesConfig.getShift();
         String range = String.format("'%s'!%s%d:", sheetName, startCol, row);
         updateRow(rowData, range);
+        log.info("Загружен раздел \"Касса в студии\" для пользователя [{} ({})]", admin, location);
     }
 
     public void updateCurrentReport(FullReportDto.CurrentReportDto dto, User user, String today) throws IOException {
@@ -207,6 +233,7 @@ public class SheetsReportService {
 
         Map<String, String> entry = currentColumnsConfig.getColumns().get(key);
         if (entry == null || !entry.containsKey("sheet") || !entry.containsKey("range")) {
+            log.warn("Неверный конфиг для текущего отчета пользователя: [{}]", key);
             throw new IllegalArgumentException("Неверный конфиг для текущего отчета пользователя: " + key);
         }
 
@@ -237,6 +264,7 @@ public class SheetsReportService {
 
         String targetRange = String.format("'%s'!%s%d:%s%d", sheetName, startCol, row, endCol, row);
         updateRow(rowData, targetRange);
+        log.info("Загружен раздел \"Текущие\" для пользователя [{} ({})]", admin, location);
     }
 
     private void updateRow(List<Object> row, String range) throws IOException {
@@ -244,7 +272,7 @@ public class SheetsReportService {
 
         sheets.spreadsheets().values()
                 .update(spreadsheetId, range, body)
-                .setValueInputOption("USER-ENTERED")
+                .setValueInputOption(VALUE_INPUT_OPTION)
                 .execute();
     }
 
@@ -253,7 +281,7 @@ public class SheetsReportService {
 
         sheets.spreadsheets().values()
                 .append(spreadsheetId, range, body)
-                .setValueInputOption("USER-ENTERED")
+                .setValueInputOption(VALUE_INPUT_OPTION)
                 .execute();
     }
 
@@ -267,7 +295,7 @@ public class SheetsReportService {
         if (rows == null) return -1;
 
         for (int relativeRowOffset = 0; relativeRowOffset < rows.size(); relativeRowOffset++) {
-            if (!rows.get(relativeRowOffset).isEmpty() && date.equals(rows.get(relativeRowOffset).get(0).toString())) {
+            if (!rows.get(relativeRowOffset).isEmpty() && date.equals(rows.get(relativeRowOffset).getFirst().toString())) {
                 return startRow + relativeRowOffset;
             }
         }
